Ooooh boy.  1. Finished updating BlackRain.  The code is much more readable and it no longer uses BlackMagic.  I might regret that in the future, but going back to BlackMagic would be a simple change.  It was other parts of the code that were unstable. \n2. Removed some of the more useless BlackRain files. \n3. Added some unit tests for BlackRain.  More tests to come soon. \n4. Changed Blip context menues to show the entry rather than the "type". \n5. Changed the way we get the object type.  \n6. Moved files and namespaces around.  Makes more sense now. \n7. Made sure the Radar was ready for our changes.

--- a/Radar/WRadar.csproj
+++ b/Radar/WRadar.csproj
@@ -93,7 +93,6 @@
     <Compile Include="Screen\Radar.Designer.cs">
       <DependentUpon>Radar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Screen\ScreenDrawer.cs" />
     <Compile Include="Settings\Colors.cs" />
     <Compile Include="Settings\Persistance.cs" />
     <Compile Include="Settings\Screen.cs" />
@@ -110,6 +109,7 @@
     <Compile Include="Utilities\ReadOnlyPropertyGrid.Designer.cs">
       <DependentUpon>ReadOnlyPropertyGrid.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\Security.cs" />
     <Compile Include="Utilities\TrackableEditor.cs">
       <SubType>Form</SubType>
     </Compile>
