--- a/BlackRain/BlackRain.csproj
+++ b/BlackRain/BlackRain.csproj
@@ -34,10 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BlackMagic, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\BlackMagic.dll</HintPath>
-    </Reference>
     <Reference Include="fasmdll_managed, Version=1.0.3262.20709, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\fasmdll_managed.dll</HintPath>
@@ -56,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Descriptors.cs" />
+    <Compile Include="Common\Flags.cs" />
     <Compile Include="WowObjects\Contracts\INamed.cs" />
     <Compile Include="ObjectManager.cs" />
     <Compile Include="WowObjects\WowContainer.cs" />
@@ -70,12 +68,6 @@
     <Compile Include="Common\Offsets.cs" />
     <Compile Include="Common\Point.cs" />
     <Compile Include="Common\Utilities.cs" />
-    <Compile Include="GUI\Log.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\Log.Designer.cs">
-      <DependentUpon>Log.cs</DependentUpon>
-    </Compile>
     <Compile Include="GUI\SelectProcess.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,9 +77,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="GUI\Log.resx">
-      <DependentUpon>Log.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="GUI\SelectProcess.resx">
       <DependentUpon>SelectProcess.cs</DependentUpon>
     </EmbeddedResource>
