Cleared up the drawing threading.  Made blip shapes static, though that may have been a mistake.  I think we need more RAM than CPU as far as this app is concerned.  Added the skeleton to accept Pulsed even to the radar.

--- a/Radar/WRadar.csproj
+++ b/Radar/WRadar.csproj
@@ -87,6 +87,9 @@
     <Compile Include="Blips\WowUnitBlip.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Screen\BlipDrawer.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Screen\Radar.cs">
       <SubType>Form</SubType>
     </Compile>
