--- a/Radar/app.config
+++ b/Radar/app.config
@@ -1,11 +1,11 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
         <section name="Radar.Colors" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v2.0.50727"/></startup><userSettings>
+<startup><supportedRuntime version="v2.0.50727" /></startup><userSettings>
         <Radar.Colors>
             <setting name="GameObject" serializeAs="String">
                 <value>OrangeRed</value>
